[gd_scene load_steps=16 format=3 uid="uid://du3eifj3a7v2"]

[ext_resource type="Texture2D" uid="uid://b660hh2s3ekvq" path="res://music/DJDeck_5.png" id="1_jrcrm"]
[ext_resource type="Script" path="res://DJ_Mixer.gd" id="1_shq18"]
[ext_resource type="AudioStream" uid="uid://bm2ded7m8ghdw" path="res://music/DJ Music Time (Bass Var.1).mp3" id="2_cu4xw"]
[ext_resource type="AudioStream" uid="uid://cmpqkaef28f40" path="res://music/GUIDE_TRACK.mp3" id="2_vdlx6"]
[ext_resource type="AudioStream" uid="uid://dyafedm1u83lr" path="res://music/DJ Music Time (Drum Var.1).mp3" id="3_stl2y"]
[ext_resource type="Texture2D" uid="uid://gg71mu01nipi" path="res://ButtonTextures/RedButton_play_off.png" id="3_v7q3b"]
[ext_resource type="Texture2D" uid="uid://b3qxstb1jki8h" path="res://ButtonTextures/RedButton_play_on.png" id="4_4q4pr"]
[ext_resource type="AudioStream" uid="uid://hrmtxogj4aed" path="res://music/DJ Music Time (Synth Chord Var.1).mp3" id="4_erqkp"]
[ext_resource type="AudioStream" uid="uid://d23lgdp1d6c24" path="res://music/DJ Music Time (Synth Lead Var.1).mp3" id="5_3gh8v"]
[ext_resource type="Texture2D" uid="uid://1dlnclvsa7jb" path="res://ButtonTextures/RedButton_stop_off.png" id="5_yurle"]
[ext_resource type="Texture2D" uid="uid://oys3t3rpslbs" path="res://ButtonTextures/RedButton_stop_on.png" id="6_6ccsg"]
[ext_resource type="Texture2D" uid="uid://o6keny042iwn" path="res://ButtonTextures/RedButton_DJ_off.png" id="7_d2qh8"]
[ext_resource type="Texture2D" uid="uid://ytry8cqije1d" path="res://ButtonTextures/RedButton_DJ_on.png" id="8_5hhmp"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_i2gxr"]
blend_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bm1nc"]

[node name="Node2D" type="Node2D"]

[node name="DjDeck5" type="Sprite2D" parent="."]
position = Vector2(400, 320)
scale = Vector2(0.388897, 0.388897)
texture = ExtResource("1_jrcrm")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.286275, 0.564706, 1, 0.764706)
material = SubResource("CanvasItemMaterial_i2gxr")
offset_left = 720.0
offset_top = -8.0
offset_right = 808.0
offset_bottom = 328.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bm1nc")

[node name="AudioControls" type="Node2D" parent="."]
script = ExtResource("1_shq18")

[node name="playBtn" type="TextureButton" parent="AudioControls"]
offset_left = 83.0
offset_top = 472.0
offset_right = 161.0
offset_bottom = 554.0
texture_normal = ExtResource("3_v7q3b")
texture_pressed = ExtResource("4_4q4pr")

[node name="stopBtn" type="TextureButton" parent="AudioControls"]
offset_left = 50.0
offset_top = 546.0
offset_right = 128.0
offset_bottom = 628.0
texture_normal = ExtResource("5_yurle")
texture_pressed = ExtResource("6_6ccsg")

[node name="djBtn" type="TextureButton" parent="AudioControls"]
offset_left = 641.0
offset_top = 472.0
offset_right = 719.0
offset_bottom = 554.0
toggle_mode = true
texture_normal = ExtResource("7_d2qh8")
texture_pressed = ExtResource("8_5hhmp")

[node name="guideTrack" type="AudioStreamPlayer" parent="AudioControls"]
stream = ExtResource("2_vdlx6")
volume_db = -80.0

[node name="bassAudio" type="AudioStreamPlayer" parent="AudioControls"]
stream = ExtResource("2_cu4xw")

[node name="drumAudio" type="AudioStreamPlayer" parent="AudioControls"]
stream = ExtResource("3_stl2y")

[node name="chordAudio" type="AudioStreamPlayer" parent="AudioControls"]
stream = ExtResource("4_erqkp")

[node name="leadAudio" type="AudioStreamPlayer" parent="AudioControls"]
stream = ExtResource("5_3gh8v")

[node name="bass0" type="Button" parent="AudioControls"]
offset_left = 208.0
offset_top = 480.0
offset_right = 280.0
offset_bottom = 511.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Bass 1"

[node name="bass1" type="Button" parent="AudioControls"]
offset_left = 288.0
offset_top = 480.0
offset_right = 360.0
offset_bottom = 511.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Bass 2"

[node name="bass2" type="Button" parent="AudioControls"]
offset_left = 368.0
offset_top = 480.0
offset_right = 440.0
offset_bottom = 511.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Bass 3"

[node name="bass3" type="Button" parent="AudioControls"]
offset_left = 448.0
offset_top = 480.0
offset_right = 520.0
offset_bottom = 512.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Bass 4"

[node name="bass4" type="Button" parent="AudioControls"]
offset_left = 528.0
offset_top = 480.0
offset_right = 561.0
offset_bottom = 511.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Off"

[node name="drum0" type="Button" parent="AudioControls"]
offset_left = 208.0
offset_top = 522.0
offset_right = 280.0
offset_bottom = 553.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Drum 1"

[node name="drum1" type="Button" parent="AudioControls"]
offset_left = 288.0
offset_top = 520.0
offset_right = 360.0
offset_bottom = 551.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Drum 2"

[node name="drum2" type="Button" parent="AudioControls"]
offset_left = 368.0
offset_top = 520.0
offset_right = 440.0
offset_bottom = 551.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Drum 3"

[node name="drum3" type="Button" parent="AudioControls"]
offset_left = 448.0
offset_top = 520.0
offset_right = 520.0
offset_bottom = 551.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Drum 4"

[node name="drum4" type="Button" parent="AudioControls"]
offset_left = 528.0
offset_top = 520.0
offset_right = 561.0
offset_bottom = 551.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Off"

[node name="chord0" type="Button" parent="AudioControls"]
offset_left = 208.0
offset_top = 562.0
offset_right = 280.0
offset_bottom = 593.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Chord 1"

[node name="chord1" type="Button" parent="AudioControls"]
offset_left = 288.0
offset_top = 560.0
offset_right = 360.0
offset_bottom = 591.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Chord 2"

[node name="chord2" type="Button" parent="AudioControls"]
offset_left = 368.0
offset_top = 560.0
offset_right = 440.0
offset_bottom = 591.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Chord 3"

[node name="chord3" type="Button" parent="AudioControls"]
offset_left = 448.0
offset_top = 560.0
offset_right = 520.0
offset_bottom = 591.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Chord 4"

[node name="chord4" type="Button" parent="AudioControls"]
offset_left = 528.0
offset_top = 560.0
offset_right = 561.0
offset_bottom = 591.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Off"

[node name="lead0" type="Button" parent="AudioControls"]
offset_left = 208.0
offset_top = 602.0
offset_right = 280.0
offset_bottom = 633.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Lead 1"

[node name="lead1" type="Button" parent="AudioControls"]
offset_left = 288.0
offset_top = 602.0
offset_right = 360.0
offset_bottom = 633.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Lead 2"

[node name="lead2" type="Button" parent="AudioControls"]
offset_left = 368.0
offset_top = 602.0
offset_right = 440.0
offset_bottom = 633.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Lead 3"

[node name="lead3" type="Button" parent="AudioControls"]
offset_left = 448.0
offset_top = 600.0
offset_right = 520.0
offset_bottom = 631.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Lead 4"

[node name="lead4" type="Button" parent="AudioControls"]
offset_left = 528.0
offset_top = 600.0
offset_right = 561.0
offset_bottom = 631.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Off"

[node name="bass_label" type="RichTextLabel" parent="AudioControls"]
offset_left = 568.0
offset_top = 480.0
offset_right = 592.0
offset_bottom = 512.0
theme_override_font_sizes/normal_font_size = 20
text = "1"

[node name="drum_label" type="RichTextLabel" parent="AudioControls"]
offset_left = 568.0
offset_top = 520.0
offset_right = 592.0
offset_bottom = 552.0
theme_override_font_sizes/normal_font_size = 20
text = "1"

[node name="chord_label" type="RichTextLabel" parent="AudioControls"]
offset_left = 568.0
offset_top = 560.0
offset_right = 592.0
offset_bottom = 592.0
theme_override_font_sizes/normal_font_size = 20
text = "1"

[node name="lead_label" type="RichTextLabel" parent="AudioControls"]
offset_left = 568.0
offset_top = 600.0
offset_right = 600.0
offset_bottom = 632.0
theme_override_font_sizes/normal_font_size = 20
text = "1"

[node name="volume_slider" type="VSlider" parent="AudioControls"]
offset_left = 728.0
offset_top = 8.0
offset_right = 800.0
offset_bottom = 304.0
max_value = 1.0
step = 0.05
value = 0.5

[connection signal="pressed" from="AudioControls/playBtn" to="AudioControls" method="_play_button_pressed"]
[connection signal="pressed" from="AudioControls/stopBtn" to="AudioControls" method="_stop_button_pressed"]
[connection signal="pressed" from="AudioControls/djBtn" to="AudioControls" method="activate_dj_toggled"]
[connection signal="finished" from="AudioControls/guideTrack" to="AudioControls" method="handle_track_finish"]
[connection signal="pressed" from="AudioControls/bass0" to="AudioControls" method="track_button_pressed" binds= ["bass", 0]]
[connection signal="pressed" from="AudioControls/bass1" to="AudioControls" method="track_button_pressed" binds= ["bass", 1]]
[connection signal="pressed" from="AudioControls/bass2" to="AudioControls" method="track_button_pressed" binds= ["bass", 2]]
[connection signal="pressed" from="AudioControls/bass3" to="AudioControls" method="track_button_pressed" binds= ["bass", 3]]
[connection signal="pressed" from="AudioControls/bass4" to="AudioControls" method="track_button_pressed" binds= ["bass", 4]]
[connection signal="pressed" from="AudioControls/drum0" to="AudioControls" method="track_button_pressed" binds= ["drum", 0]]
[connection signal="pressed" from="AudioControls/drum1" to="AudioControls" method="track_button_pressed" binds= ["drum", 1]]
[connection signal="pressed" from="AudioControls/drum2" to="AudioControls" method="track_button_pressed" binds= ["drum", 2]]
[connection signal="pressed" from="AudioControls/drum3" to="AudioControls" method="track_button_pressed" binds= ["drum", 3]]
[connection signal="pressed" from="AudioControls/drum4" to="AudioControls" method="track_button_pressed" binds= ["drum", 4]]
[connection signal="pressed" from="AudioControls/chord0" to="AudioControls" method="track_button_pressed" binds= ["chord", 0]]
[connection signal="pressed" from="AudioControls/chord1" to="AudioControls" method="track_button_pressed" binds= ["chord", 1]]
[connection signal="pressed" from="AudioControls/chord2" to="AudioControls" method="track_button_pressed" binds= ["chord", 2]]
[connection signal="pressed" from="AudioControls/chord3" to="AudioControls" method="track_button_pressed" binds= ["chord", 3]]
[connection signal="pressed" from="AudioControls/chord4" to="AudioControls" method="track_button_pressed" binds= ["chord", 4]]
[connection signal="pressed" from="AudioControls/lead0" to="AudioControls" method="track_button_pressed" binds= ["lead", 0]]
[connection signal="pressed" from="AudioControls/lead1" to="AudioControls" method="track_button_pressed" binds= ["lead", 1]]
[connection signal="pressed" from="AudioControls/lead2" to="AudioControls" method="track_button_pressed" binds= ["lead", 2]]
[connection signal="pressed" from="AudioControls/lead3" to="AudioControls" method="track_button_pressed" binds= ["lead", 3]]
[connection signal="pressed" from="AudioControls/lead4" to="AudioControls" method="track_button_pressed" binds= ["lead", 4]]
[connection signal="value_changed" from="AudioControls/volume_slider" to="AudioControls" method="adjust_volume"]
